# Veila

./: Cargo.toml  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
assets/themes/: boracay.toml  default.toml  diagonal.toml  kitty.toml  normandy.toml  samurai.toml  santorini.toml  seceda.toml  skyline.toml  window.toml
crates/common/src/: ipc.rs  lib.rs
crates/common/src/config/: background.rs  lock.rs  mod.rs
crates/common/src/config/tests/: bundled_defaults_tests.rs  defaults_tests.rs  file_loading_tests.rs  mod.rs  nested_visual_fixture.rs  nested_visual_tests.rs  parsing_tests.rs  theme_loading_tests.rs
crates/common/src/config/validation/: mod.rs  schema.rs
crates/common/src/config/visuals/: backdrop.rs  clock.rs  grid.rs  identity.rs  indicators.rs  input.rs  layout.rs  mod.rs  outputs.rs  (+2 more)
crates/curtain/src/: app.rs  lib.rs  main.rs  preview.rs  reload.rs
crates/curtain/src/background/: loader.rs  mod.rs  slideshow.rs
crates/curtain/src/state/: memory.rs  mod.rs  repeat.rs
crates/daemon/src/: main.rs  options.rs
crates/daemon/src/adapters/: process.rs
crates/daemon/src/app/: helpers.rs  mod.rs  mpris.rs  prewarm.rs  state.rs  suspend.rs  watch.rs
crates/daemon/src/control/: config.rs  daemon.rs  idle.rs  logs.rs  mod.rs  term.rs
crates/renderer/src/background/: asset.rs  mod.rs  render.rs  render_cache.rs  tests.rs
crates/ui/src/shell/: clock.rs  emergency.rs  mod.rs  now_playing.rs  state.rs  tests.rs
debian/: rules
docs/man/: veila.1
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh
scripts/: check-deps
(+31 files in other folders)
