[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/curtain",
    "crates/daemon",
    "crates/renderer",
    "crates/ui",
]

[workspace.package]
version = "0.1.9"
edition = "2024"
authors = ["Nauris Steins"]
license = "GPL-3.0-or-later"
repository = "https://github.com/naurissteins/Veila"

[workspace.dependencies]
anyhow = "1"
calloop = { version = "0.14", features = ["signals"] }
cosmic-text = "0.14"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
nix = { version = "0.31", features = ["signal", "user"] }
nonstick = "0.1"
resvg = { version = "0.46", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "xkbcommon"] }
thiserror = "2"
time = { version = "0.3", features = ["local-offset"] }
tiny-skia = "0.11"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", default-features = true, features = ["json"] }
xkbcommon = "0.9"
zbus = { version = "5", default-features = false, features = ["tokio"] }
